--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,10 @@ body {
     /* font-family: 'Outfit'; */
     font-family: 'Nunito';
     font-family: 'DM Sans';
+   
+}
+
+h3{
+    font-size: 18px;
+    font-weight: bold;
 }
